fix(TimePicker): style be covered

--- a/src/components/TimePicker/TimePicker.less
+++ b/src/components/TimePicker/TimePicker.less
@@ -13,7 +13,7 @@
     padding-bottom: @time-picker-cell-height * 5;
     float: left;
     overflow: hidden !important;
-    width: @time-picker-cell-width;
+    width: @time-picker-cell-width !important;
     border: @time-picker-cells-border;
 
     &:hover {
